# mpir_sparse

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run_suitesparse.py
experiments/: run_suitesparse_grid.py
notebooks/: 01_quick_demo.ipynb  02_suitesparse_walkthrough.ipynb
results/: results.csv
src/mpir_sparse/: __init__.py  ir.py  preconditioners.py  schedulers.py  tracing.py  utils.py
tests/: solve.py  test_ir.py  test_tracing.py
